# Quipu

./: .gitignore  DEVELOPING.md  PROMPT.md  README.md  TODO.md  axon  bootstrap.py  conftest.py  content.md  debug_quipu.py  dev-requirements.txt  install_quipu.py  logger_config.py  main.py  metadata.json  pyproject.toml  requirements.txt  verify_sandbox.py
.axon/: .gitignore  memory.md
.github/workflows/: ci.yml
acts/: basic.py  check.py  git.py  memory.py  read.py  refactor.py  shell.py
commands/: run.py
core/: controller.py  eng_config.py  eng_git_db.py  eng_state_machine.py  engine.py  executor.py  history.py  intf_types.py  models.py  parser.py  plugin_loader.py  result.py  types.py
docs/: 01_introduction.md  02_getting_started.md  04_prompting_guide.md
docs/03_user_guide/: 01_core_concepts.md  02_cli_reference.md  03_acts_reference.md
docs/05_developer_guide/: 01_architecture.md  02_adding_new_acts.md
scripts/: release_manager.py
snapshot/: DEVELOPING.md  README.md  README.zh-CN.md  TESTING_GUIDELINES.md  bootstrap.py  clear_quipu_refs.sh  dev-requirements.txt  dev_setup.sh  install_quipu.py  migrate_quipu_locales.py  migrate_tests.py  move_pyquipu_to_quipu.py  pyproject.toml  refactor_tests.py
snapshot/.github/workflows/: cd.yml  python-publish.yml
snapshot/scripts/: check_locales.py  release_manager.py
snapshot/tests/: conftest.py  helpers.py
snapshot/tests/application/: conftest.py  test_controller.py
snapshot/tests/cli/: test_export_command.py  test_navigation_commands.py  test_query_commands.py  test_unfriendly_paths.py
snapshot/tests/engine/: test_deduplication.py  test_engine.py  test_head_tracking.py
snapshot/tests/integration/: test_cli_workflow.py  test_storage_selection.py  test_sync_modes.py  test_sync_workflow.py  test_workspace_invariance.py  test_workspace_isolation.py
snapshot/tests/runtime/: conftest.py  test_plugin_loader.py  (+1 more)
tests/: conftest.py  helpers.py  test_arg_strategy.py  test_auto_detect.py  test_branching.py  test_check.py  test_engine.py  test_git.py  test_git_db.py  test_graph_loader.py  test_head_and_root.py  test_idempotent_node.py  test_integration_v2.py  test_ops.py  test_plugins.py  test_read.py  test_root_invariance.py  test_ui_logic.py  test_ui_reachability.py  test_view_model.py
tests/cli/: conftest.py  test_cache_commands.py  test_cli_interaction.py  test_export_command.py  test_navigation_commands.py  test_query_commands.py  test_tui_logic.py  test_tui_reachability.py  test_unfriendly_paths.py  test_view_model.py  test_workspace_commands.py
tests/engine/: test_branching.py  test_config.py  test_engine.py  test_engine_memory.py  test_git_db.py  test_git_reader.py  test_git_writer.py  test_head_tracking.py  test_navigation.py
tests/integration/: conftest.py  helpers.py  test_cli_workflow.py  test_idempotent_node.py  test_storage_selection.py  test_sync_modes.py  test_sync_workflow.py  test_workspace_invariance.py  test_workspace_isolation.py
tests/runtime/: conftest.py  test_arg_strategy.py  test_parser_and_basic_acts.py  test_parser_auto_detect.py  test_plugin_loader.py  test_plugin_resilience.py
ui/: tui.py
(+12 files in other folders)
