[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quipu-dev"
version = "0.1.0"
description = "Metapackage for the Quipu monorepo development environment."
requires-python = ">=3.8"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["packages"]
include = ["quipu*"]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "packages/quipu-interfaces/src",
    "packages/quipu-engine/src",
    "packages/quipu-runtime/src",
    "packages/quipu-cli/src",
]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"