[project]
name = "pyquipu-monorepo"
version = "0.1.0"
description = "Quipu Development Monorepo - The complete toolkit."
authors = [{ name="doucx", email="doucxldh@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyquipu",
]

[project.optional-dependencies]
dev = [
    "pyquipu",
    "pyquipu-test-utils",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "ruff",
    "pre-commit"
]

[tool.uv]
workspace.members = ["packages/*"]

[tool.uv.sources]
pyquipu = { workspace = true }
pyquipu-application = { workspace = true }
pyquipu-bus = { workspace = true }
pyquipu-cli = { workspace = true }
pyquipu-common = { workspace = true }
pyquipu-engine = { workspace = true }
pyquipu-spec = { workspace = true }
pyquipu-runtime = { workspace = true }
pyquipu-test-utils = { workspace = true }

[tool.pytest.ini_options]
addopts = "-ra --cov=quipu --cov-report=term-missing"
testpaths = "tests packages"
pythonpath = [
  "packages/pyquipu/src",
  "packages/pyquipu-spec/src",
  "packages/pyquipu-engine/src",
  "packages/pyquipu-runtime/src",
  "packages/pyquipu-cli/src",
  "packages/pyquipu-common/src",
  "packages/pyquipu-application/src",
  "packages/pyquipu-test-utils/src",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/pyquipu-cli/src/quipu"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.stitcher]
scan_paths = ["packages"]
